--- a/style.css
+++ b/style.css
@@ -1,4 +1,125 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap'); 
+
+
+*{
+    box-sizing:border-box;
+    font-family:'Montserrat', sans-serif;
+    color:black;
+}
+
+
+
+
+html, body{
+    margin:0;
+    padding: 0;
+}
+.nav ul{
+    margin:0;
+}
+
+.nav li{
+    display:inline;
+}
+
+.nav a{
+    display: inline-block;
+    padding:.5em;
+    color:black;
+    text-decoration:none;
+    font-weight:900;
+}
+.main-nav{
+    text-align:center;
+    font-size:1.1em;
+    font-weight: lighter;
+    border-bottom: 1px solid rgba(255,255,255,.3)
+}
+
+.main-nav li{
+    padding:0 5%;
+}
+.nav a:hover{
+    background-color: rgba(255,255,255,.3)
+}
+
 .main-header{
     background-color:#f8d5db ;
+    background-blend-mode: multiply ;
     background-size: cover;
+    padding-bottom: 30px;
+}   
+.welcome-sign{
+    text-align:center;
+    margin:0;
+    font-size:4em;
+    
+}
+.content-section{
+    margin: lem;
+}
+.container{
+    max-width:450px;
+    margin:0 auto;
+    padding:0 1.5em;
+}
+.section-header{
+    font-family:'Montserrat', sans-serif;
+    font-weight:normal;
+    color:#333;
+    text-align: center;
+    font-size:2.5 em;
+}
+.about-image{
+    float:left;
+    margin: 15px;
+    border-radius: 50%;
+
+
+}
+.main-footer{
+    background-color:pink ;
+    color:white;
+    padding:.25em 0;
+}
+
+.main-footer-container{
+display:flex;
+align-items:center;
+}
+
+.main-footer-container ul{
+    flex-grow:1;
+    text-align:end;
+}
+.footer-nav li{
+    padding:0 .5em;
+
+}
+
+.footer-nav img{
+width:30px;
+height:30px;
+}
+
+.btn{
+    text-align:center;
+    vertical-align:middle;
+    padding: .67em;
+    cursor:pointer;
+    margin:.5em 50% 2em 50%;
+    color:white;
+    border:2px solid blue;
+}
+
+.name2{
+    text-align:center;
+    vertical-align:center;
+}
+
+
+.bodytotal{
+    background-image:url("snow-winter-lights-night-wallpaper-preview.jpg") ; 
+    width:400px;
+    background-color: pink;
 }
